Design fit and finish as requested by designer and incorporating user feedback.

--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <string name="app_name">XYZ Reader</string>
+    <string name="app_name_logo_content_description">XYZ Reader logo</string>
     <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>
 
     <string name="action_refresh">Refresh</string>
@@ -8,5 +9,7 @@
     <string name="action_share">Share</string>
 
     <string name="up">Up</string>
+    <string name="connectivity_snackbar_msg">Please check your Internet connection.</string>
+    <string name="not_available">N/A</string>
 
 </resources>
